<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:src="@drawable/contact1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#38BFFB"
        app:hintTextColor="#38BFFB"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#38BFFB"
            android:hint="@string/enter_your_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#38BFFB"
        app:hintTextColor="#38BFFB"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#38BFFB"
            android:hint="@string/enter_your_mail_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#38BFFB"
        app:hintTextColor="#38BFFB"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#38BFFB"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#38BFFB"
        app:hintTextColor="#38BFFB"
        app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/uniqueId"
            android:layout_height="wrap_content"
            android:textColor="#38BFFB"
            android:hint="@string/enter_unique_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_gravity="center"
        app:cornerRadius="15dp"
        android:backgroundTint="#38BFFB"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_already_registered"
            android:layout_marginStart="95dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>