<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_image"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/contact1"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/contact"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#4C4141"
        android:backgroundTint="@color/white"
        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:backgroundTint="#AAB1BE"
        />


</LinearLayout>